// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Toast > Icon.vue > should renders OXD ToastIcon 1`] = `
"<div data-v-e0c4fc83="" class="oxd-toast-icon-container">
  <div data-v-e0c4fc83="" class="oxd-toast-icon-wrap oxd-toast-icon-wrap--default"><i data-v-85cde8ca="" data-v-e0c4fc83="" class="oxd-icon bi-star oxd-toast-icon"></i></div>
</div>"
`;

exports[`Toast > Icon.vue > should renders OXD ToastIcon error 1`] = `
"<div data-v-e0c4fc83="" class="oxd-toast-icon-container">
  <div data-v-e0c4fc83="" class="oxd-toast-icon-wrap oxd-toast-icon-wrap--error"><i data-v-85cde8ca="" data-v-e0c4fc83="" class="oxd-icon bi-exclamation-circle oxd-toast-icon"></i></div>
</div>"
`;

exports[`Toast > Icon.vue > should renders OXD ToastIcon info 1`] = `
"<div data-v-e0c4fc83="" class="oxd-toast-icon-container">
  <div data-v-e0c4fc83="" class="oxd-toast-icon-wrap oxd-toast-icon-wrap--info"><i data-v-85cde8ca="" data-v-e0c4fc83="" class="oxd-icon bi-info-circle oxd-toast-icon"></i></div>
</div>"
`;

exports[`Toast > Icon.vue > should renders OXD ToastIcon success 1`] = `
"<div data-v-e0c4fc83="" class="oxd-toast-icon-container">
  <div data-v-e0c4fc83="" class="oxd-toast-icon-wrap oxd-toast-icon-wrap--success"><i data-v-85cde8ca="" data-v-e0c4fc83="" class="oxd-icon bi-check2 oxd-toast-icon"></i></div>
</div>"
`;

exports[`Toast > Icon.vue > should renders OXD ToastIcon warn 1`] = `
"<div data-v-e0c4fc83="" class="oxd-toast-icon-container">
  <div data-v-e0c4fc83="" class="oxd-toast-icon-wrap oxd-toast-icon-wrap--warn"><i data-v-85cde8ca="" data-v-e0c4fc83="" class="oxd-icon bi-exclamation-triangle oxd-toast-icon"></i></div>
</div>"
`;
